--- a/src/app/components/pages/edit-page/edit-page.html
+++ b/src/app/components/pages/edit-page/edit-page.html
@@ -533,7 +533,7 @@
               mat-raised-button
               color="primary"
               type="submit"
-              [disabled]="loading || !editForm.valid"
+              [disabled]="!editForm.valid"
               class="save-btn"
             > Salvar
               <mat-icon>save</mat-icon>
